[package]
name = "mineome"
description = "Mineome is a Rust library focusing on providing high quality type definitions for the data-driven aspects of Minecraft Java Edition."
categories = ["games", "api-bindings"]
keywords = ["minecraft", "datapack", "data-driven"]

version = "0.2.0"
edition = "2018"
license = "MIT"

documentation = "https://docs.rs/mineome"
repository = "https://github.com/Jdender/mineome"
homepage = "https://github.com/Jdender/mineome"
authors = ["Jdender~ <jdenderplays@gmail.com>"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
