[package]
name = "mineome"
description = "Mineome is a Rust library focusing on providing high quality type definitions for the data-driven aspects of Minecraft Java Edition."
categories = ["games", "api-bindings"]
keywords = ["minecraft", "datapack", "data-driven"]

version = "0.2.0"
edition = "2018"
license = "MIT"

repository = "https://github.com/jamesBeeProg/mineome"
authors = ["jamesBeeProg"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.6.4"